# Morde

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: log.h  morde.h
src/: CMakeLists.txt  log.c  morde.c
tests/: CMakeLists.txt  test_main.c
